# DanhuangProduct

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html
docs/product/: CURRENT_TK_UI_OPTIMIZATION_BACKLOG.md  DANHUANG_UI_DESIGN_BRIEF.md  GIT_BRANCH_WORKFLOW_20260703.md  IMPLEMENTATION_TRACKER.md  PRIVACY_COMMERCIALIZATION.md  ROADMAP.md  TK_CURRENT_PROJECT_STATUS_20260703.md  Tk原型模块化拆分计划.md  UI_REDESIGN_SPEC.md  UI重构规格.md  VUE_BRANCH_PUSH_RUNBOOK_20260703.md  Vue版本跨电脑推送操作文档_20260703.md  当前Tk桌宠UI优化清单.md  执行追踪.md  目录治理.md  目标架构.md  蛋黄-Tk前端页面优化打包记录-v1.md  蛋黄-Tk前端页面优化执行计划-v1.md  蛋黄-Tk宠物分类体系-技术文档-v1.md  蛋黄-双版本分支与提交规范-v1.md  蛋黄GitHub分支维护方案_20260703.md  蛋黄Tk当前项目梳理_20260703.md  蛋黄桌宠产品需求.md
scripts/: check-dev.ps1  publish-github.ps1
src/: App.vue  styles.css
src-prototype/: README.md
src-prototype/legacy-monolith/: CHANGELOG.md  run-danhuang-desktop-pet.py  start-danhuang-desktop-pet.ps1
src-prototype/modular/: README.md  validate_phase1.py  validate_phase2.py  validate_phase3.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-vue/: .env.example  README.md  index.html  package-lock.json  package.json
src-tauri-vue/src/: App.vue  components.ts  main.ts  styles.css
src-tauri-vue/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-vue/src-tauri/builtin-runtime/danhuang/: pet-family.json
src-tauri-vue/src-tauri/capabilities/: default.json
src-tauri-vue/src-tauri/src/: builtin_assets.rs  lib.rs  main.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: runtime.ts
src/types/: runtime.ts
(+76 files in other folders)
