[package]
name = "danhuang-desktop-pet-tauri-vue"
version = "0.1.0"
description = "Danhuang desktop pet frontend product spike"
authors = ["DanhuangProduct"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "danhuang_desktop_pet_tauri_vue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "dwmapi", "wingdi", "winbase", "wincrypt", "winuser"] }

[profile.release]
debug = 0
strip = true
panic = "abort"
lto = "thin"
codegen-units = 1
